fixed the eventsPage spacing

--- a/react-app/src/components/Events/Elements/eventCard.css
+++ b/react-app/src/components/Events/Elements/eventCard.css
@@ -7,7 +7,7 @@
 }
 
 * {
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
 }
 
 .body {
@@ -123,7 +123,7 @@
   margin-top: 10px;
   float: left;
   width: 50%;
-  font-size: 28px;
+  font-size: 180%;
   text-orientation: upright;
   writing-mode: vertical-rl;
 }
@@ -134,386 +134,7 @@
   /* margin-top: 20px; */
   float: left;
   width: 50%;
-  font-size: 38px;
+  font-size: 240%;
   text-orientation: upright;
   writing-mode: vertical-rl;
 }
-/* .main {
-  display: flex;
-  justify-content: center;
-  height: 100%;
-  width: 100%;
-}
-
-.eventCard {
-  display: flex;
-  box-shadow: 0 0 3px 1px black;
-  justify-content: center;
-  border-radius: 6%;
-  /* margin: 0 auto;
-  max-height: 60%;
-  min-height: 60%;
-  max-width: 60%;
-  min-width: 60%;
-  /* height: 100%;
-  width: 100%;
-  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),
-    0px 5px 8px 0px rgba(0, 0, 0, 0.14),
-    0px 1px 14px 0px rgba(0, 0, 0, 0.12);
-  overflow: hidden;
-  background-image: var(--imageUrl);
-  background-size: cover;
-}
-
-.info {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  background-color: #fff;
-  transform: translateY(100%) translateY(-22%) translateZ(0);
-  transition: transform 0.3s ease-out;
-}
-
-/* .info:before {
-  z-index: -1;
-  display: block;
-  position: absolute;
-  content: ' ';
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  background-size: cover;
-  transform: translateY(-100%) translateY(20%) translateZ(0);
-  transition: transform 0.3s ease-out;
-}
-
-.eventCard:hover .info,
-.eventCard:hover .info:before {
-  transform: translateY(50%) translateZ(0);
-}
-
-.title {
-  padding: 5%;
-  font-family: "Eina-semibold";
-  font-size: 140%;
-  line-height: 1;
-  color: rgba(0, 0, 0, 0.87);
-}
-
-.category-date {
-  margin: 0;
-  padding: 0 4% 4%;
-  font-size: 100%;
-  line-height: 1.5;
-} */
-
-/* html {
-  font-size: 16px
-} */
-
-/*
-body,
-header {
-  background: #fafafa
-}
-
-header {
-  padding: 40px;
-  min-height: 200px;
-  text-align: center;
-  color: rgba(0, 0, 0, .87)
-}
-
-header>* {
-  max-width: 800px;
-  margin-left: auto;
-  margin-right: auto
-}
-
-header>:last-child {
-  margin-bottom: 0
-} */
-
-/* h1 {
-  margin-bottom: 0.5em;
-  font-weight: inherit;
-  line-height: 1.2;
-  color: #1c5b72;
-  font-size: 2.618em
-} */
-/*
-@media (min-width:800px) {
-  h1 {
-    font-size: 4.236em;
-    font-weight: 300
-  }
-}
-
-p {
-  margin-bottom: 1.3em;
-  line-height: 1.618
-}
-
-@media (min-width:800px) {
-  p {
-    font-size: 1.3em
-  }
-}
-@media (max-width:800px) {
-  main {
-    height: "300px";
-    width: "300px";
-  }
-}
-
-a {
-  color: #e03616;
-  text-decoration: none
-} */
-
-/* OTHER */
-
-/* @media(max-height:800px) {
-  /* .main {
-    max-height: 70%;
-    min-height: 50%;
-    min-width: 50%;
-    max-width: 70%;
-  } */
-/* .eventCard {
-    min-height: 50%;
-    min-width: 50%;
-  } */
-/* .title {
-    font-size: 9px;
-  }
-
-  .category-date {
-    visibility: hidden;
-  }
-
-  .description-text {
-    width: 108px;
-    height: 128px
-  }
-
-  .info {
-    width: 60px;
-    height: 60px
-  }
-
-
-@media(max-height:600px) {
-  /* .main {
-    width: 40%;
-    height: 40%;
-    max-height: 40%;
-    min-height: 30%;
-    min-width: 30%;
-    max-width: 40%;
-  } */
-/* .title {
-    font-size: 8px;
-  }
-
-  .category-date {
-    visibility: hidden;
-  }
-
-  .description-text {
-    width: 100px;
-    height: 100px;
-  }
-
-  .info {
-    width: 60px;
-    height: 60px
-  }
-}
-
-@media(max-height:508px) {
-  /* .main {
-      max-height: 40%;
-      min-height: 30%;
-      min-width: 40%;
-      max-width: 30%;
-    }
-  .title {
-    font-size: 100%;
-  }
-
-  .category-date {
-    visibility: hidden;
-  }
-
-  .description-text {
-    width: 100%;
-    height: 100%
-  }
-
-  .info {
-    width: 100%;
-    height: 100%
-  }
-}
-
-@media(max-height:430px) {
-  /* .main {
-      max-height: 40%;
-      min-height: 30%;
-      min-width: 40%;
-      max-width: 30%;
-    }
-  .title {
-    visibility: hidden;
-  }
-
-  .category-date {
-    visibility: hidden;
-  }
-
-  .description-text {
-    width: 100%;
-    height: 100%
-  }
-
-  .info {
-    width: 100%;
-    height: 100%
-  }
-} */
-/* @media(max-height:800px) {
-  .main {
-    max-height: 400px;
-    min-height: 380px;
-  }
-} */
-
-/* @media(max-width:800px) {
-  .main {
-    max-width: 400px;
-    min-width: 380px;
-  }
-
-  /* .title {
-    font-size: 9px;
-  }
-
-  .category-date {
-    visibility: hidden;
-  }
-
-  .description-text {
-    width: 108px;
-    height: 128px
-  }
-
-  .info {
-    width: 60px;
-    height: 60px
-  }
-}
-
-/* @media(max-height:600px) {
-  .main {
-    max-width: 300px;
-    min-width: 280px;
-    /* max-height: 40%;
-    max-width: 40%;
-    min-height: 30%;
-    min-width: 30%;
-  }
-
-  /* .title {
-    font-size: 8px;
-  }
-
-  .category-date {
-    visibility: hidden;
-  }
-
-  .description-text {
-    width: 100px;
-    height: 100px;
-  }
-
-  .info {
-    width: 60px;
-    height: 60px
-  }
-}
-
-/* @media(max-width:600px) {
-  .main {
-    max-width: 300px;
-    min-width: 280px;
-  }
-} */
-
-/* @media(max-width:508) {
-  .main {
-    max-width: 200px;
-    min-width: 160px;
-  }
-} */
-
-/* @media(max-height:508px) {
-  .main {
-    max-height: 200px;
-    min-height: 160px;
-    /* max-height: 25%;
-    max-width: 25%;
-    min-height: 20%;
-    min-width: 20%;
-  }
-
-  /* .title {
-    font-size: 8px;
-  }
-
-  .category-date {
-    visibility: hidden;
-  }
-
-  .description-text {
-    width: 100px;
-    height: 100px
-  }
-
-  .info {
-    width: 60px;
-    height: 60px
-  }
-}
-
-/* @media(max-width:430px) {
-  .main {
-    max-width: 70px;
-    min-width: 60px;
-  }
-} */
-
-/* @media(max-height:430px) {
-  .main {
-    max-height: 70px;
-    min-height: 60px;
-  }
-
-  /* .title {
-    visibility: hidden;
-  }
-
-  .category-date {
-    visibility: hidden;
-  }
-
-  .description-text {
-    width: 80px;
-    height: 80px
-  }
-
-  .info {
-    width: 60px;
-    height: 60px
-  }
-} */
