--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -51,6 +51,8 @@ select {
 }
 
 .eventsHolder {
+    justify-content: center;
+    margin: 0px;
     display: flex;
     flex-wrap: wrap;
     gap: 15px;
